# pandaria_5.4.8

./: .gitignore  .hgeol  .hgignore  2022_06_18_01_world_borean_tundra.sql  CMakeLists.txt  CMakeSettings.json  README.md  THANKS.md  pull_request_template.md  revision.h.in.cmake
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc
src/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h  TOTP.cpp  TOTP.h
src/server/authserver/PrecompiledHeaders/: authPCH.cpp  authPCH.h
src/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h  RealmAcceptor.h  RealmSocket.cpp  RealmSocket.h
src/server/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  RegularGrid.h  VMapDefinitions.h  VMapTools.h
src/server/collision/Management/: IVMapManager.h  MMapFactory.cpp  MMapFactory.h  MMapManager.cpp  MMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/server/collision/Maps/: MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/server/collision/Models/: GameObjectModel.cpp  GameObjectModel.h  ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  WorldModel.h
src/server/collision/PrecompiledHeaders/: collisionPCH.cpp  collisionPCH.h
src/server/game/: CMakeLists.txt
src/server/game/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIFactory.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/Addons/: AddonMgr.cpp  AddonMgr.h
src/server/game/Anticheat/: AnticheatMgr.cpp  AnticheatMgr.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionHouseBotBuyer.cpp  AuctionHouseBotBuyer.h  AuctionHouseBotSeller.cpp  AuctionHouseBotSeller.h
src/server/game/BattlePay/: BattlePayMgr.cpp  BattlePayMgr.h  ServiceBoost.cpp  ServiceBoost.h
src/server/game/BattlePet/: BattlePet.cpp  BattlePet.h  BattlePetAbilityEffect.cpp  BattlePetAbilityEffect.h  BattlePetAura.cpp  BattlePetAura.h  BattlePetMgr.cpp  BattlePetMgr.h  BattlePetSpawnMgr.cpp  BattlePetSpawnMgr.h  PetBattle.cpp  PetBattle.h
src/server/game/Battlefield/: Battlefield.cpp  Battlefield.h  BattlefieldMgr.cpp  BattlefieldMgr.h
src/server/game/Battlegrounds/: ArenaTeam.cpp  ArenaTeam.h  Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  (+5 more)
src/server/scripts/: CMakeLists.txt
src/server/shared/: CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Containers.h  Define.h  Memory.h  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  worldserver.conf.dist  worldserver.rc
src/updater/: App.cpp  CMakeLists.txt  README.txt  sql_update.sql  updater.conf.dist
(+2421 files in other folders)
